<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NumberPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/undraw_mobile_pay" />
    </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_num"
                android:fontFamily="@font/opsr"
                android:textColor="#6371EA"
                android:textSize="22sp"
                android:textAlignment="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/num_ver_txt"
                android:fontFamily="@font/opsr"
                android:layout_marginTop="5dp"
                android:textColor="#666"
                android:textSize="15sp"
                android:textAlignment="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/countryCode"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:background="@drawable/linear_border"
                android:textColor="#353535"
                android:hint="@string/country_code"
                android:textColorHint="#aaa"
                android:textSize="18sp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"/>
            <EditText
                android:id="@+id/num_textField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#353535"
                android:background="@drawable/textviews_bg"
                android:inputType="number"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <Button
                android:id="@+id/verify_number"
                android:onClick="verifyNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/button_bg"
                android:text="@string/ver_otp"
                android:fontFamily="@font/samsungsans_regular"
                android:textColor="#fff"
                android:drawableEnd="@drawable/icons_number_pad_filled"
                android:paddingEnd="50dp"
                android:paddingStart="50dp"
                android:textSize="17sp"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>