<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoPage"
    android:background="#101">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="30dp">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="selfie.json"
                app:lottie_loop="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/pBar"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:max="100"
                style="?android:attr/progressBarStyleHorizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/recordBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/record_bg"
                android:text="@string/record"
                android:onClick="record"
                android:fontFamily="@font/samsungsans_regular"
                android:textColor="#fff"
                android:drawableEnd="@drawable/icons_record"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textAlignment="center"
                />
            <Button
                android:id="@+id/uploadBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:onClick="upload"
                android:background="@drawable/button_bg"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/upload"
                android:fontFamily="@font/samsungsans_regular"
                android:textColor="#fff"
                android:drawableEnd="@drawable/icons_upload"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textAlignment="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/watch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:onClick="openDownPage"
                android:background="@drawable/button_bg"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/click_to_watch_video"
                android:fontFamily="@font/samsungsans_regular"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textAlignment="center"
                />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/downloadUpPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        android:background="#101">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp">
            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/watchBtn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/record_bg"
                android:text="@string/vedio"
                android:fontFamily="@font/samsungsans_regular"
                android:textColor="#fff"
                android:onClick="download"
                android:drawableEnd="@drawable/icons_record"
                android:paddingEnd="90dp"
                android:paddingStart="90dp"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:textAlignment="center"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>